# nucl-parquet

./: .gitignore  LICENSE  README.md  build.py  build_pet_site.py  build_therapy_site.py  catalog.json  catalog.schema.json  loader.py  pet_candidates.csv  pet_candidates.parquet  pet_isotopes.html  pyproject.toml  target_feasibility.py  therapy_isotopes.html
.github/workflows/: ci.yml  release.yml
brond-3.1/: manifest.json
brond-3.1/xs/: n_Ag.parquet  n_Al.parquet  n_Am.parquet  n_Ar.parquet  n_Au.parquet  n_B.parquet  n_Ba.parquet  n_Be.parquet  n_Bi.parquet  n_Br.parquet  n_C.parquet  n_Ca.parquet  n_Cd.parquet  n_Ce.parquet  n_Cl.parquet  n_Cm.parquet  n_Co.parquet  n_Cr.parquet  n_Cs.parquet  n_Cu.parquet  n_Dy.parquet  n_Er.parquet  n_Eu.parquet  n_F.parquet  n_Fe.parquet  n_Ga.parquet  n_Gd.parquet  n_Ge.parquet  n_H.parquet  n_He.parquet  n_Hf.parquet  n_Ho.parquet  n_I.parquet  n_In.parquet  n_Ir.parquet  n_K.parquet  n_Kr.parquet  n_La.parquet  n_Li.parquet  n_Lu.parquet  (+43 more)
cendl-3.2/: manifest.json
cendl-3.2/xs/: n_Ag.parquet  n_Al.parquet  n_Am.parquet  n_As.parquet  n_Au.parquet  n_B.parquet  n_Ba.parquet  n_Be.parquet  n_Bi.parquet  n_Bk.parquet  n_C.parquet  n_Ca.parquet  n_Cd.parquet  n_Ce.parquet  n_Cf.parquet  n_Cl.parquet  n_Co.parquet  n_Cr.parquet  n_Cs.parquet  n_Cu.parquet  n_Dy.parquet  n_Eu.parquet  n_F.parquet  n_Fe.parquet  n_Ga.parquet  n_Gd.parquet  n_Ge.parquet  n_H.parquet  n_He.parquet  n_Hf.parquet  n_Hg.parquet  n_Ho.parquet  n_I.parquet  n_In.parquet  n_K.parquet  n_Kr.parquet  n_La.parquet  n_Li.parquet  n_Mg.parquet  n_Mn.parquet  (+37 more)
containers/talys/: Containerfile  generate.py  ingest.py  run.sh
docs/theranostics/: .gitignore  generate.py  refs.bib
eaf-2010/: manifest.json
eaf-2010/xs/: n_Ac.parquet  n_Ag.parquet  n_Al.parquet  n_Am.parquet  n_Ar.parquet  n_As.parquet  n_At.parquet  n_Au.parquet  n_B.parquet  n_Ba.parquet  n_Be.parquet  n_Bi.parquet  (+85 more)
endfb-8.1/: manifest.json
exfor/: a_Ag.parquet  a_Al.parquet  a_As.parquet  a_Be.parquet  a_Bi.parquet  a_Br.parquet  a_C.parquet  a_Ca.parquet  a_Cd.parquet  a_Co.parquet  a_Er.parquet  a_F.parquet  a_Fe.parquet  a_Ga.parquet  a_Gd.parquet  a_Ge.parquet  a_Ho.parquet  a_Ir.parquet  a_K.parquet  a_Mg.parquet  a_Mn.parquet  a_Mo.parquet  a_N.parquet  a_Nd.parquet  a_Ni.parquet  a_O.parquet  a_Pb.parquet  a_Pd.parquet  a_Pt.parquet  a_Rb.parquet  a_Re.parquet  a_Rh.parquet  a_Sb.parquet  a_Sc.parquet  a_Se.parquet  a_Si.parquet  a_Sn.parquet  a_Sr.parquet  a_Ta.parquet  a_Tb.parquet  (+182 more)
fendl-3.2/: manifest.json
iaea-medical/: manifest.json
iaea-pd-2019/: manifest.json
irdff-2/: manifest.json
jeff-4.0/: manifest.json
jendl-5/: manifest.json
jendl-ad-2017/: manifest.json
jendl-deu-2020/: manifest.json
meta/: abundances.parquet  decay.parquet  dose_constants.parquet  elements.parquet  xcom_compounds.parquet  xcom_elements.parquet
nucl_parquet/: __init__.py  __main__.py  _schemas.py  build_dose_constants.py  build_epdl.py  build_heavy_ions.py  build_hi_xs.py  build_stopping.py  build_xcom.py  download.py  loader.py
py/nucl-parquet-mcp/: pyproject.toml
py/nucl-parquet-mcp/nucl_parquet_mcp/: __init__.py  __main__.py  server.py
py/nucl-parquet-mcp/tests/: test_server.py
rs/nucl-parquet/: Cargo.toml
rs/nucl-parquet-mcp/: Cargo.toml
rs/nucl-parquet-mcp/src/: main.rs
rs/nucl-parquet/src/: error.rs  interp.rs  lib.rs  photon.rs  relaxation.rs
scripts/: fetch_decay_radiation.py  fetch_endf_libs.py  fetch_ensdf.py  fetch_exfor.py  generate_catalog.py  plot_xs.py
stopping/: stopping.parquet
tendl-2024/: manifest.json
tendl-2025/: manifest.json
tests/: conftest.py  test_build.py  test_coverage.py  test_integrity.py  test_loader.py  test_schemas.py
(+3985 files in other folders)
