[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nucl-parquet"
version = "0.3.5"
description = "Nuclear data as Parquet — queryable with DuckDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["duckdb>=1.5.0", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["polars>=1.0", "pytest>=8.0", "requests>=2.31"]

[dependency-groups]
dev = [
    "endf>=0.1.12",
    "polars>=1.0",
    "pytest>=8.0",
    "requests>=2.31",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/exoma-ch/nucl-parquet"
Repository = "https://github.com/exoma-ch/nucl-parquet"

[tool.setuptools.packages.find]
include = ["nucl_parquet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["data: requires parquet data files"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
