[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nucl-parquet-mcp"
version = "0.3.7"
description = "MCP server for nuclear data — lazy-loads Parquet from GitHub"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "pyarrow>=17.0",
]

[project.scripts]
nucl-parquet-mcp = "nucl_parquet_mcp.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
