[package]
name = "nucl-parquet-mcp"
version = "0.3.8"
edition = "2021"
description = "MCP server for nuclear data — lazy-loads Parquet from GitHub"
license = "MIT"
repository = "https://github.com/exoma-ch/nucl-parquet"

[[bin]]
name = "nucl-parquet-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
parquet = { version = "54", default-features = false, features = ["arrow"] }
arrow = { version = "54", default-features = false }
bytes = "1"
